[tool.poetry]
name = "jupyter-playground"
version = "0.1.0"
description = ""
authors = ["QuinnManor <matthewq1428@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
jupyter = "^1.0.0"
pandas = "^1.1.0"
gitpython = "^3.1.7"
jupyter_contrib_nbextensions = "^0.5.1"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
bokeh = "^2.3.2"
networkx = "^2.5.1"
python-louvain = "^0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
